# indep_free

./: .gitignore  README.md  pyproject.toml
indep_free/: cli.py  downloader.py  mailer.py  manager.py  utils.py
tests/: conftest.py  test_downloader.py  test_mailer.py  test_main.py  test_manager.py
