[tool.poetry]
name = "indep_free"
version = "0.1.0"
description = "Send newspaper \"El Independiente\" to mail. While we can download the newspaper and sed via email."
authors = ["Emmanuel Arias <eamanu@yaerobi.com>"]
license = "GPL-3+"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
